--- a/tsconfig/tsconfig.base.json
+++ b/tsconfig/tsconfig.base.json
@@ -3,8 +3,10 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "strict": true,
-    "baseUrl": "./",
+    "baseUrl": "../",
     "allowSyntheticDefaultImports": true,
     "types": ["node"]
-  }
+  },
+  "include": ["../**/*"],
+  "exclude": ["../dist/**/*", "../node_modules/**/*", "../tests/**/*"]
 }
