--- a/tsconfig/tsconfig.cjs.json
+++ b/tsconfig/tsconfig.cjs.json
@@ -7,9 +7,9 @@
     "lib": ["DOM", "es5"],
     "allowJs": true,
     "declaration": true,
-    "outDir": "./dist/cjs",
-    "rootDir": "./src"
+    "outDir": "../dist/cjs",
+    "rootDir": "../src"
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.test.*", "src/cli/**/*", "src/browser/**/*"]
+  "include": ["../src/**/*"],
+  "exclude": ["../node_modules", "../**/*.test.*", "../src/cli/**/*", "../src/browser/**/*"]
 }
