--- a/.github/workflows/tests_and_maybe-publish.yaml
+++ b/.github/workflows/tests_and_maybe-publish.yaml
@@ -124,10 +124,10 @@ jobs:
         with:
           node-version: node
       - name: Install Deno manually
+        shell: bash
         run: |
           curl -fsSL https://deno.land/x/install/install.sh | bash
-          echo "${HOME}/.deno" >> $GITHUB_PATH
-          echo "${DENO_INSTALL}/bin" >> $GITHUB_PATH
+          echo "${HOME}/.deno/bin" >> $GITHUB_PATH
       - name: Install dependencies
         run: npm install --ignore-scripts
       - name: Build
