--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "test:node": "npm run test:node:versions:GE:20 && npm run test:node:versions:17:18:19 && npm run test:node:versions:LE:16",
     "test:cli": "tsx --test tests/cli/*.test.ts",
     "test:bun": "tsx --test tests/bun/*.test.ts",
-    "test:deno": "tsx --test tests/deno/*.test.ts",
+    "test:deno": "deno test --sloppy-imports --allow-read \"./tests/deno/*.test.ts\"",
     "test:firefox": "tsx --test tests/firefox/*.test.ts",
     "test:chrome": "tsx --test tests/chrome/*.test.ts",
     "test:safari": "tsx --test tests/safari/*.test.ts",
