--- a/.github/workflows/tests_and_maybe-publish.yaml
+++ b/.github/workflows/tests_and_maybe-publish.yaml
@@ -123,6 +123,8 @@ jobs:
         uses: denoland/setup-deno@v1
         with:
           deno-version: v2.x
+      - name: Install dependencies
+        run: deno install
       - name: Build
         shell: bash
         run: deno task build
