add native bun tests

--- a/.github/workflows/tests_and_maybe-publish.yaml
+++ b/.github/workflows/tests_and_maybe-publish.yaml
@@ -96,25 +96,16 @@ jobs:
   test-bun:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Set up Bun
+        uses: oven-sh/setup-bun@v2
         with:
-          node-version: node
-      - name: Install Bun manually
-        run: |
-          curl -fsSL https://bun.sh/install | bash
-          echo "${HOME}/.bun/bin" >> $GITHUB_PATH
+          bun-version: latest
       - name: Install dependencies
-        run: npm install --ignore-scripts
-      - name: Build
-        shell: bash
-        run: npm run build
-      - name: Run tests
-        shell: bash
-        run: npm run test:bun
-        env:
-          FORCE_COLOR: "1"
+        run: bun install
+      - name: Run Bun tests
+        run: bun run test:bun
   test-deno:
     runs-on: ubuntu-latest
     steps:
