--- a/tsconfig/tsconfig.base.json
+++ b/tsconfig/tsconfig.base.json
@@ -5,7 +5,7 @@
     "strict": true,
     "baseUrl": "../",
     "allowSyntheticDefaultImports": true,
-    "types": ["node"]
+    "types": ["node", "bun-types"]
   },
   "include": ["../**/*"],
   "exclude": ["../dist/**/*", "../node_modules/**/*", "../tests/**/*"]
