--- a/.github/workflows/tests_and_maybe-publish.yaml
+++ b/.github/workflows/tests_and_maybe-publish.yaml
@@ -35,6 +35,14 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: node
+      - name: Install Deno manually
+        run: |
+          curl -fsSL https://deno.land/x/install/install.sh | sh
+          echo "$HOME/.deno/bin" >> $GITHUB_PATH
+      - name: Install Bun manually
+        run: |
+          curl -fsSL https://bun.sh/install | bash
+          echo "$HOME/.bun/bin" >> $GITHUB_PATH
       - name: Install dependencies
         run: npm install --ignore-scripts
       - name: Build
