--- a/tsconfig/tsconfig.cjs.json
+++ b/tsconfig/tsconfig.cjs.json
@@ -11,5 +11,5 @@
     "rootDir": "../src"
   },
   "include": ["../src/**/*"],
-  "exclude": ["../node_modules", "../**/*.test.*", "../src/cli/**/*", "../src/browser/**/*"]
+  "exclude": ["../node_modules", "../**/*.test.*", "../src/cli/**/*", "../src/umd/**/*"]
 }
