--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   "type": "module",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
+  "browser": "./dist/umd/js-randomness-predictor.js",
   "types": "dist/esm/index.d.ts",
   "exports": {
-    "import": "./dist/esm/index.js",
-    "require": "./dist/cjs/index.js"
+    ".": {
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js"
+    }
   },
   "bin": {
     "js-randomness-predictor": "./dist/esm/cli/cli.js"
