--- a/tsconfig/tsconfig.types.json
+++ b/tsconfig/tsconfig.types.json
@@ -1,14 +1,16 @@
 {
+  // Used solely to emit types into dist/types
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "target": "esnext",
     "module": "nodenext",
     "moduleResolution": "nodenext",
-    "outDir": "../dist/esm",
+    "outDir": "../dist/types",
     "rootDir": "../src",
     "allowJs": false,
+    "declaration": true,
     "isolatedModules": true
   },
   "include": ["../src/**/*"],
-  "exclude": ["../node_modules/", "../**/*.test.*", "../src/umd/**/*"]
+  "exclude": ["../node_modules/", "../**/*.test.*", "../src/cli/**/*"]
 }
