--- a/tsconfig/tsconfig.cjs.json
+++ b/tsconfig/tsconfig.cjs.json
@@ -7,6 +7,7 @@
     "lib": ["DOM", "es5"],
     "allowJs": true,
     "outDir": "../dist/cjs",
+    "declaration": true,
     "rootDir": "../src"
   },
   "include": ["../src/**/*"],
