--- a/tsconfig/tsconfig.esm.json
+++ b/tsconfig/tsconfig.esm.json
@@ -7,6 +7,7 @@
     "outDir": "../dist/esm",
     "rootDir": "../src",
     "allowJs": false,
+    "declaration": true,
     "isolatedModules": true
   },
   "include": ["../src/**/*"],
