--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   },
   "description": "Predict Math.random output in Node, Deno, Bun, Chrome, Firefox, and Safari",
   "type": "module",
-  "types": "dist/esm/index.d.ts",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "types": "./dist/types/index.d.ts",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
   "browser": "./dist/umd/js-randomness-predictor.js",
   "bin": {
     "js-randomness-predictor": "./dist/esm/cli/cli.js"
@@ -19,7 +19,7 @@
       "require": "./dist/cjs/index.js"
     },
     "./umd": {
-      "import": "./dist/umd/js-randomness-predictor.js"
+      "default": "./dist/umd/js-randomness-predictor.js"
     }
   },
   "files": [
@@ -37,7 +37,7 @@
   "scripts": {
     "prepublishOnly": "npm run build",
     "postbuild": "node postbuild.cjs",
-    "build": "rimraf dist && npm run build:esm && npm run build:cjs && npm run build:umd",
+    "build": "rimraf dist && npm run build:esm && npm run build:cjs && npm run build:umd && npm run emit:types",
     "build:ci": "npm run build:esm && npm run build:cjs && npm run postbuild",
     "build:esm": "tsc -p tsconfig/tsconfig.esm.json",
     "build:cjs": "tsc -p tsconfig/tsconfig.cjs.json",
@@ -57,7 +57,7 @@
     "format": "prettier . --write",
     "lint": "eslint .",
     "prepare": "husky",
-    "emit:umd:types": "tsc -p tsconfig/tsconfig.umd.json --emitDeclarationOnly",
+    "emit:types": "tsc -p tsconfig/tsconfig.types.json --emitDeclarationOnly",
     "publish:main:major": "git add . && git commit --allow-empty -m \"[publish] #major\" && git push origin main",
     "publish:main:minor": "git add . && git commit --allow-empty -m \"[publish] #minor\" && git push origin main",
     "publish:main:patch": "git add . && git commit --allow-empty -m \"[publish] #patch\" && git push origin main"
