--- a/tsconfig/tsconfig.types.json
+++ b/tsconfig/tsconfig.types.json
@@ -5,12 +5,12 @@
     "target": "esnext",
     "module": "nodenext",
     "moduleResolution": "nodenext",
-    "outDir": "../dist/umd/",
+    "outDir": "../dist/types/",
     "rootDir": "../src",
     "allowJs": false,
     "declaration": true,
     "isolatedModules": true
   },
-  "include": ["../src/umd/**/*"],
+  "include": ["../src/**/*"],
   "exclude": ["../node_modules/", "../**/*.test.*"]
 }
