--- a/configs/tsconfig.esm.json
+++ b/configs/tsconfig.esm.json
@@ -10,5 +10,5 @@
     "isolatedModules": true
   },
   "include": ["../src/**/*"],
-  "exclude": ["../node_modules/", "../**/*.test.*", "../src/umd/**/*"]
+  "exclude": ["../node_modules/", "../**/*.test.*", "../src/browser/**/*"]
 }
