--- a/configs/tsconfig.cjs.json
+++ b/configs/tsconfig.cjs.json
@@ -1,14 +1,16 @@
 {
-  "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "target": "ES2020",
     "module": "CommonJS",
-    "moduleResolution": "node",
     "lib": ["DOM", "es5"],
     "allowJs": true,
     "outDir": "../dist/cjs",
-    "rootDir": "../src"
+    "rootDir": "../src",
+    "strict": true,
+    "esModuleInterop": false,
+    "allowSyntheticDefaultImports": false,
+    "moduleResolution": "node",
+    "skipLibCheck": true
   },
-  "include": ["../src/**/*"],
-  "exclude": ["../node_modules", "../**/*.test.*", "../src/cli/**/*", "../src/browser/**/*"]
+  "files": ["../src/cjs.ts"]
 }
