--- a/configs/tsconfig.esm.json
+++ b/configs/tsconfig.esm.json
@@ -1,5 +1,4 @@
 {
-  "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "target": "esnext",
     "module": "nodenext",
@@ -7,8 +6,10 @@
     "outDir": "../dist/esm",
     "rootDir": "../src",
     "allowJs": false,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "esModuleInterop": false,
+    "allowSyntheticDefaultImports": true
   },
-  "include": ["../src/**/*"],
-  "exclude": ["../node_modules/", "../**/*.test.*", "../src/browser/**/*"]
+  "files": ["../src/esm.ts"],
+  "include": ["../src/cli/**/*"]
 }
