--- a/configs/tsconfig.types.json
+++ b/configs/tsconfig.types.json
@@ -1,16 +1,12 @@
 {
   // Used solely to emit types into dist/types
-  "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "target": "esnext",
-    "module": "nodenext",
     "moduleResolution": "nodenext",
-    "outDir": "../dist/types/",
-    "rootDir": "../src",
-    "allowJs": false,
+    "module": "nodenext",
     "declaration": true,
-    "isolatedModules": true
+    "emitDeclarationOnly": true,
+    "outFile": "../dist/types/index.d.ts"
   },
-  "include": ["../src/**/*"],
-  "exclude": ["../node_modules/", "../**/*.test.*"]
+  "files": ["../src/esm.ts"]
 }
