--- a/tsconfig/tsconfig.esm.json
+++ b/tsconfig/tsconfig.esm.json
@@ -7,8 +7,9 @@
     "outDir": "../dist/esm",
     "rootDir": "../src",
     "allowJs": false,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "removeComments": true
   },
   "include": ["../src/**/*"],
-  "exclude": ["../node_modules/", "../**/*.test.*", "../src/umd/**/*"]
+  "exclude": ["../node_modules/", "../**/*.test.*", "../src/browser/**/*"]
 }
