--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "buffer": "^6.0.3",
     "bun-types": "^1.2.22",
     "eslint": "^9.35.0",
+    "glob": "^11.0.3",
     "husky": "^9.1.7",
     "jiti": "^2.5.1",
     "lint-staged": "^16.2.0",
