--- a/tsconfig/tsconfig.esm.json
+++ b/tsconfig/tsconfig.esm.json
@@ -4,7 +4,7 @@
     "target": "esnext",
     "module": "nodenext",
     "moduleResolution": "nodenext",
-    "outDir": "../dist-staging/esm",
+    "outDir": "../dist/staging/esm",
     "rootDir": "../src",
     "allowJs": false,
     "isolatedModules": true,
